--- a/src/layouts/base.astro
+++ b/src/layouts/base.astro
@@ -53,7 +53,9 @@ rev-drawer {
 
     <link rel="stylesheet" href="/style/global.css">
     <link rel="stylesheet" href="/style/home.css">
-    <script type="module" src="../components/rev-drawer-prebundled.js"></script>
+    <script hoist type="module">
+        import '@divriots/rev/drawer/rev-drawer.js';
+    </script>
 </head>
 <body>
     {timestamp ?
