--- a/src/pages/preview__/contact.astro
+++ b/src/pages/preview__/contact.astro
@@ -1,5 +1,5 @@
 ---
-import BlurLayout from '../../layouts/blur.astro'
+import BlurLayout from '../../layouts/blur.astro';
 
 const [contact] = Astro.fetchContent('../../content/contact/contact.md');
 ---
