--- a/src/pages/preview__/team.astro
+++ b/src/pages/preview__/team.astro
@@ -2,6 +2,7 @@
 import * as path from 'node:path';
 import BlurLayout from '../../layouts/blur.astro'
 import Founder from '../../components/founder.astro';
+import SplitNewlines from '../../utils/split-newlines.jsx';
 
 const content = Astro.fetchContent('../../content/**/*.md');
 const founders = content.filter(md => path.dirname(md.file.pathname).endsWith('founders')).sort((a,b) => {
@@ -34,6 +35,23 @@ const [team] = content.filter(md => path.dirname(md.file.pathname).endsWith('tea
     position: relative;
   }
 
+  .intro {
+    font-size: 1rem;
+    line-height: 1.75rem;
+    text-align: center;
+    max-width: 60ch;
+    margin: 0 auto 5rem auto;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  @media (min-width: 601px) {
+    .intro {
+      font-size: 1.25rem;
+      line-height: 2rem;
+    }
+  }
+
   .founders {
     display: flex;
     flex-wrap: wrap;
@@ -51,6 +69,9 @@ const [team] = content.filter(md => path.dirname(md.file.pathname).endsWith('tea
 </style>
 <link rel="stylesheet" href="/style/team.css" />
 <BlurLayout heading={team.heading}>
+<div class="intro">
+<SplitNewlines content={team.description}></SplitNewlines>
+</div>
 <div class="founders">
   {founders.map(founder => (
     <Founder founder={founder} />
