fix diensten grid responsiveness

--- a/src/components/dienst.astro
+++ b/src/components/dienst.astro
@@ -4,6 +4,7 @@ const { content } = Astro.props;
 <style>
   .wrapper {
     display: flex;
+    height: 100%;
     flex-direction: column;
     max-width: 500px;
     background-color: var(--color-primary-grey);
