fix grammar footer

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -111,7 +111,7 @@ footer {
         <Socials></Socials>
     </div>
     <div class="reference-links">
-        <a href="/preview__/contact">Wordt een Code.Founder_</a>
+        <a href="/preview__/contact">Word een Code.Founder_</a>
         <a href="/preview__/team">Bekijk je docenten</a>
         <a href="/preview__/contact">Stel je vraag</a>
         <a href="/preview__/contact">Samenwerken</a>
