--- a/public/style/opleiding.css
+++ b/public/style/opleiding.css
@@ -12,7 +12,7 @@
 
 .relative-wrapper h2 {
   font-size: 1.5rem;
-  text-align: right;
+  width: 100%;
   display: inline-block;
   position: relative;
   margin: 2rem 0 3rem 0;
