add hipster to contact

--- a/src/pages/preview__/team.astro
+++ b/src/pages/preview__/team.astro
@@ -81,7 +81,7 @@ const [team] = content.filter(md => path.dirname(md.file.pathname).endsWith('tea
 <BlurLayout heading={team.heading}>
   <div class="relative-wrapper">
     <div class="intro">
-      <img class="shirt" src="/assets/images/t-shirt.png" />
+      <img alt="code-founders t-shirt" class="shirt" src="/assets/images/t-shirt.png" />
       <SplitNewlines content={team.description}></SplitNewlines>
     </div>
   </div>
