chore: remove preview__ to launch site

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -118,16 +118,16 @@ import Socials from '../components/socials.astro';
       <Socials></Socials>
     </div>
     <div class="reference-links">
-      <a href="/preview__/contact">Word een Code.Founder_</a>
-      <a href="/preview__/team">Bekijk je docenten</a>
-      <a href="/preview__/contact">Stel je vraag</a>
-      <a href="/preview__/contact">Samenwerken</a>
+      <a href="/contact">Word een Code.Founder_</a>
+      <a href="/team">Bekijk je docenten</a>
+      <a href="/contact">Stel je vraag</a>
+      <a href="/contact">Samenwerken</a>
     </div>
-    <a href="/preview__/" class="footer-logo-mobile">
+    <a href="/" class="footer-logo-mobile">
       <img alt="codefounders logo" src="/assets/images/logo/mark-green.jpg" />
     </a>
     <div class="socials-container-desktop">
-      <a class="logo" href="/preview__/"><img alt="codefounders logo" src="/assets/images/logo/logo.png"></a>
+      <a class="logo" href="/"><img alt="codefounders logo" src="/assets/images/logo/logo.png"></a>
       <Socials></Socials>
       <p>info@codefounders.nl</p>
       <!-- placeholder <p>088 - 88 8888 88</p>-->
