--- a/src/components/nav-menu.astro
+++ b/src/components/nav-menu.astro
@@ -27,7 +27,7 @@ a {
 }
 </style>
 <ul>
-  <li><a href="/preview__/opleidingen">Opleidingen</a></li>
-  <li><a href="/preview__/team">Team</a></li>
-  <li><a href="/preview__/contact">Contact</a></li>
+  <li><a href="/opleidingen">Opleidingen</a></li>
+  <li><a href="/team">Team</a></li>
+  <li><a href="/contact">Contact</a></li>
 </ul>
