--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -1,10 +1,10 @@
 ---
 import * as path from 'node:path';
-import BlurLayout from '../../layouts/blur.astro'
-import Founder from '../../components/founder.astro';
-import SplitNewlines from '../../utils/split-newlines.jsx';
+import BlurLayout from '../layouts/blur.astro'
+import Founder from '../components/founder.astro';
+import SplitNewlines from '../utils/split-newlines.jsx';
 
-const content = Astro.fetchContent('../../content/**/*.md');
+const content = Astro.fetchContent('../content/**/*.md');
 const founders = content.filter(md => path.dirname(md.file.pathname).endsWith('founders')).sort((a,b) => {
   const orderA = a.order || 9999;
   const orderB = b.order || 9999;
