--- a/src/components/founder.astro
+++ b/src/components/founder.astro
@@ -142,5 +142,5 @@ const { founder, simple } = Astro.props;
       : ''}
       </Fragment>
   }
-  {simple ? <LinkButton class={"reviews"} href={'/preview__/team'} label={'Lees meer reviews'}></LinkButton> : ''}
+  {simple ? <LinkButton class={"reviews"} href={'/team'} label={'Lees meer reviews'}></LinkButton> : ''}
 </div>
