--- a/src/layouts/base.astro
+++ b/src/layouts/base.astro
@@ -74,7 +74,7 @@ rev-drawer {
                     <NavMenu></NavMenu>
                 </nav>
             </rev-drawer>
-            <a href="/preview__/" class="header-logo" aria-label="home">
+            <a href="/" class="header-logo" aria-label="home">
                 <img alt="codefounders logo" src="/assets/images/logo/logo.png" />
             </a>
             <nav class="nav-desktop">
