--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,79 +1,89 @@
 ---
-let title = 'Code.Founders_';
+import * as path from 'node:path';
+import BaseLayout from '../layouts/base.astro';
+import Founder from '../components/founder.astro';
+import LinkButton from '../components/link-button.astro';
+import SplitNewlines from '../utils/split-newlines.jsx';
+
+const mds = Astro.fetchContent('../content/**/*.md');
+const founders = mds.filter(md => path.dirname(md.file.pathname).endsWith('founders')).sort((a,b) => {
+    const orderA = a.order || 9999;
+    const orderB = b.order || 9999;
+    return orderA - orderB;
+});
+const content = mds.filter(md => path.dirname(md.file.pathname).endsWith('home'));
+const introHeading = content.find(md => md.unique_id === 'intro-heading');
+const methodiekSection = content.find(md => md.unique_id === 'methodiek-section');
+const pitch = mds.filter(md => path.dirname(md.file.pathname).endsWith('pitch'));
+const pitchHeading = pitch.find(md => md.unique_id === 'pitch-heading');
+const pitchButton = pitch.find(md => md.unique_id === 'pitch-button');
 ---
+<BaseLayout>
+    <div class="purple-bg">
+        <section id="intro">
+            <div class="content-container">
+                <div class="content">
+                    <h2>{introHeading.slogan}</h2>
+                    <SplitNewlines content={introHeading.description}></SplitNewlines>
+                    <LinkButton href={introHeading.button_navigation} label={introHeading.button_text}></LinkButton>
+                </div>
+            </div>
+        </section>
+
+        <section id="opsomming">
+            <div class="content-container">
+                <div class="content">
+                    <div class="flex-content">
+                        <h2>{pitchHeading.heading}</h2>
+                        <div class="flex-paragraphs">
+                            {pitch.slice(1, pitch.length - 1).map(part => <div>
+                                <h3>{part.heading}</h3>
+                                <SplitNewlines content={part.pitch_part_description}></SplitNewlines>
+                            </div>)}
+                        </div>
+                    </div>
+                    <LinkButton href={pitchButton['pitch-button_navigation']} label={pitchButton['pitch-button_text']}></LinkButton>
+                </div>
+            </div>
+        </section>
+    </div>
+    <section id="methodiek">
+        <div class="img-laptop"></div>
+        <div class="content">
+            <h2>{methodiekSection.heading}</h2>
+            <SplitNewlines content={methodiekSection.description}></SplitNewlines>
+            <LinkButton href={methodiekSection.button_navigation} label={methodiekSection.button_text} class={"cta-btn"}></LinkButton>
+        </div>
+    </section>
+
+    <section id="alles_is_code">
+        <h2>
+        <span class="green">Alles is </span><span class="strike">liefde</span><br>
+        <span>Code</span><span class="green">.</span>
+        </h2>
+    </section>
+
+    <section id="founders">
+        <div class="alles_is_code">
+            <h2>
+            <span class="green">Alles is </span><span class="strike">liefde</span><br>
+            <span>Code</span><span class="green">.</span>
+            </h2>
+        </div>
+        <div class="founders">
+            {founders.slice(0, 3).map(founder => (
+                <Founder founder={founder} simple={true} />
+            ))}
+        </div>
+    </section>
+</BaseLayout>
 <style>
-
-  html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    background-color: var(--color-primary-black);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  h1 {
-    font-family: HelveticaNeue, serif;
-    font-weight: bold;
-    font-size: 3rem;
-  }
-  #cursor {
-    text-shadow: 0px 2px white
-  }
-</style>
-<html lang="en">
-<head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Code.Founders. If you can code, you can do anything.">
-    <meta name="author" content="Code.Founders_">
-    <meta name="keywords" content="code, founders, educatie, traineeship, bootcamp, docenten, leraren, leerlingen, studenten, IT, programmeren, coderen">
-    <meta name="theme-color" content="#00cc99">
-    <meta name="twitter:title" content="Code.Founders_ | If you can code, you can do anything">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@CodeFoundersNL">
-    <meta name="twitter:creator" content="@divRIOTS">
-    <meta name="twitter:image" content="https://codefounders.nl/assets/meta-image.jpg">
-    <meta property="og:type" content="website">
-    <meta property="og:locale" content="nl-NL">
-    <meta property="og:site" content="https://codefounders.nl/">
-    <meta property="og:site_name" content="Code.Founders_">
-    <meta property="og:title" content="Code.Founders_ | If you can code, you can do anything">
-    <meta property="og:description" content="Code.Founders. If you can code, you can do anything.">
-    <meta property="og:image" content="https://codefounders.nl/assets/meta-image.jpg">
-    <meta property="og:image:alt" content="Display picture of Code.Founders_">
-    <title>{title}</title>
-
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-
-    <link rel="stylesheet" href="/style/global.css">
-</head>
-<body>
-<h1>
-  <span id="cursor">_</span>
-</h1>
-<script>
-  const headingChars = 'Code.Founders'.split('');
-  const cursorEl = document.getElementById('cursor');
-  setInterval(() => {
-    cursorEl.style.visibility = getComputedStyle(cursorEl).getPropertyValue('visibility') === 'hidden' ? '' : 'hidden';
-  }, 500);
-
-  (async function() {
-    let green = false;
-    await new Promise(resolve => setTimeout(resolve, 1000));
-    for (let char of headingChars) {
-      const charEl = document.createElement('span');
-      charEl.innerText = char;
-      if (green)
-        charEl.style.color = 'var(--color-primary-green)';
-      if (char === '.')
-        green = true;
-
-      cursorEl.insertAdjacentElement('beforebegin', charEl);
-      await new Promise(resolve => setTimeout(resolve, 50 + Math.floor(Math.random() * 300)));
+    .cta-btn {
+        text-decoration: none;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        color: white;
+        z-index: 1;
     }
-  })();
-</script>
-</body>
-</html>
+</style>
