--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,7 +42,7 @@ const pitchButton = pitch.find(md => md.unique_id === 'pitch-button');
                             </div>)}
                         </div>
                     </div>
-                    <LinkButton href={pitchButton['pitch-button_navigation']} label={pitchButton['pitch-button_text']}></LinkButton>
+                    <LinkButton href={pitchButton['pitch_button_navigation']} label={pitchButton['pitch_button_text']}></LinkButton>
                 </div>
             </div>
         </section>
